Closed
Bug 1446981
Opened 8 years ago
Closed 8 years ago
Crash in nsPresContext::CacheAllLangs
Categories
(Core :: CSS Parsing and Computation, defect)
Tracking
()
RESOLVED
FIXED
mozilla60
| Tracking | Status | |
|---|---|---|
| firefox-esr52 | --- | unaffected |
| firefox59 | --- | unaffected |
| firefox60 | + | fixed |
| firefox61 | --- | unaffected |
People
(Reporter: calixte, Assigned: emilio)
References
Details
(Keywords: crash, regression)
Crash Data
Attachments
(1 file)
|
1.35 KB,
patch
|
bzbarsky
:
review+
ryanvm
:
approval-mozilla-beta+
|
Details | Diff | Splinter Review |
This bug was filed from the Socorro interface and is
report bp-04890523-2054-4067-9feb-18d9f0180319.
=============================================================
Top 10 frames of crashing thread:
0 xul.dll nsPresContext::CacheAllLangs layout/base/nsPresContext.cpp:2060
1 xul.dll mozilla::ServoStyleSet::PreTraverse layout/style/ServoStyleSet.cpp:499
2 xul.dll mozilla::ServoStyleSet::StyleDocument layout/style/ServoStyleSet.cpp:1023
3 xul.dll mozilla::ServoRestyleManager::DoProcessPendingRestyles layout/base/ServoRestyleManager.cpp:1156
4 xul.dll mozilla::PresShell::DoFlushPendingNotifications layout/base/PresShell.cpp:4196
5 xul.dll nsIPresShell::FlushPendingNotifications layout/base/nsIPresShell.h:574
6 xul.dll nsRefreshDriver::Tick layout/base/nsRefreshDriver.cpp:1916
7 xul.dll mozilla::RefreshDriverTimer::TickDriver layout/base/nsRefreshDriver.cpp:341
8 xul.dll mozilla::RefreshDriverTimer::TickRefreshDrivers layout/base/nsRefreshDriver.cpp:311
9 xul.dll mozilla::RefreshDriverTimer::Tick layout/base/nsRefreshDriver.cpp:333
=============================================================
There are 173 crashes with Firefox beta 60 (they started with b3) and 18 with FennecAndroid beta 60 (they started with b4).
:emilio, could you investigate please ?
Flags: needinfo?(emilio)
| Reporter | ||
Comment 1•8 years ago
|
||
[Tracking Requested - why for this release]:
Pretty high volume and recent regression
tracking-firefox60:
--- → ?
| Assignee | ||
Comment 2•8 years ago
|
||
So, this is the counterpoint to the signature in https://bugzilla.mozilla.org/show_bug.cgi?id=1433669.
The diagnostic assert makes us crash in aurora, and this is the crash that we get in beta.
I guess I can land a wallpaper for beta, the real fixes are the relevant bugs with DoFlushPendingNotifications in the signature.
Assignee: nobody → emilio
Flags: needinfo?(emilio)
| Assignee | ||
Comment 3•8 years ago
|
||
Attachment #8960198 -
Flags: review?(bzbarsky)
Comment 4•8 years ago
|
||
Comment on attachment 8960198 [details] [diff] [review]
WallPaper broken presshell invariants on beta.
r=me
Attachment #8960198 -
Flags: review?(bzbarsky) → review+
| Assignee | ||
Comment 5•8 years ago
|
||
Comment on attachment 8960198 [details] [diff] [review]
WallPaper broken presshell invariants on beta.
Approval Request Comment
[Feature/Bug causing the regression]: bug 1428491 causes this specific crash, but the invariant was broken before.
[User impact if declined]: crashes
[Is this code covered by automated tests?]: no
[Has the fix been verified in Nightly?]: nightly is not affected (bugs have been fixed).
[Needs manual test from QE? If yes, steps to reproduce]: no
[List of other uplifts needed for the feature/fix]: none
[Is the change risky?]: not risky
[Why is the change risky/not risky?]: only adds a safe wallpaper to avoid getting into the crashing code.
[String changes made/needed]: none
Attachment #8960198 -
Flags: approval-mozilla-beta?
Comment 6•8 years ago
|
||
Comment on attachment 8960198 [details] [diff] [review]
WallPaper broken presshell invariants on beta.
Lower-risk wallpaper fix for Beta. Approved for 60.0b6.
Attachment #8960198 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Comment 7•8 years ago
|
||
| uplift | ||
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla60
You need to log in
before you can comment on or make changes to this bug.
Description
•