Bug 1446981 - Wallpaper broken PresShell invariants on Fx60. r=bz, a=RyanVM

MozReview-Commit-ID: Lxowvwpxs20